--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@ on:
   push:
     branches:
 #NOMBRE DE LA RAMA DEBE CONINCIDER CON DONDE ESTAS COMITEANDO (master|main)
-      - master
+      - main
 
 name: Deploy to heroku
 
 env:
 #REGISTRARLO EN GITHUB\SETTINGS\SECRET (EL VALOR VIENE HEROKU\ACCOUNT SETTINGS\APPLICATIONS)
-  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY1 }}
+  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
 #CAMBIAR AQUI NOMBRE DEL APLICATIVO EN HEROKU EN EL DASHBOARD
   HEROKU_APP_NAME: ${{ 'app-netcore-programacion00' }}
 
@@ -21,7 +21,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Docker build
-      run: docker login --username=_ --password=$HEROKU_API_KEY1 registry.heroku.com
+      run: docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
 
     - name: Publish
       run: |
